change controller, add tests for controller, add page "not_found"