@@ -10,10 +10,12 @@ import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Stream;
+
 import static org.mockito.Mockito.when;
 
 @SpringBootTest
@@ -29,6 +31,7 @@ class ParticipantServiceImplTest {
         Participant fromBD = new Participant(1L, "Sferiff", "football", "Moldova", 342);
         Participant edit = fromBD;
         edit.setName("Test");
+
         return Stream.of(
                 Arguments.of(fromBD, edit),
                 Arguments.of(null, edit)
@@ -47,12 +50,12 @@ class ParticipantServiceImplTest {
     private static Stream<Arguments> searchFlexibleProvider() {
         Participant fromBD1 = new Participant(1L, "Sheriff", "football", "Moldova", 342);
         Participant fromBD2 = new Participant(2L, "Sheriff", "football", "Moldova", 342);
-        List <Participant> participants1= Arrays.asList(fromBD1, fromBD2);
         Participant fromBD3 = new Participant(3L, "Colibri", "dance", "Moldova", 654);
-        List <Participant> participants2= List.of(fromBD3);
+        List<Participant> participants1 = Arrays.asList(fromBD1, fromBD2);
+        List<Participant> participants2 = List.of(fromBD3);
 
         return Stream.of(
-                Arguments.of("Sheriff",participants1),
+                Arguments.of("Sheriff", participants1),
                 Arguments.of("dance", participants2),
                 Arguments.of("test", null)
         );
@@ -62,8 +65,10 @@ class ParticipantServiceImplTest {
     @Test
     void saveParticipant() {
         Participant expected = new Participant(1L, "Sferiff", "football", "Moldova", 342);
-        when(participantRepository.save(expected)).thenReturn(expected);
         Participant actual = participantService.saveParticipant(expected);
+
+        when(participantRepository.save(expected)).thenReturn(expected);
+
         Assertions.assertEquals(expected, actual, "Object doesn't save");
         Assertions.assertNotNull(actual, "saveParticipant shouldn't return null ");
     }
@@ -72,46 +77,50 @@ class ParticipantServiceImplTest {
     void fetchParticipantList() {
         Participant participant1 = new Participant(1L, "Sferiff", "football", "Moldova", 342);
         Participant participant2 = new Participant(2L, "Sferiff", "football", "Moldova", 654);
-        when(participantRepository.findAll()).thenReturn(Arrays.asList(participant1, participant2));
         List<Participant> participants = participantService.fetchParticipantList();
+
+        when(participantRepository.findAll()).thenReturn(Arrays.asList(participant1, participant2));
+
         Assertions.assertEquals(2, participants.size(), "fetchParticipantList should return 2");
     }
 
     @ParameterizedTest
-    @MethodSource ("getParticipantByIdProvider")
+    @MethodSource("getParticipantByIdProvider")
     void getParticipantById(Participant participant) {
-//        Participant expected = new Participant(1L, "Sferiff", "football", "Moldova", 342);
         when(participantRepository.findById(1L)).thenReturn(Optional.ofNullable(participant));
 
         Participant actual = participantService.getParticipantById(1L);
 
-//        Assertions.assertNotNull(actual, "Object with such id was not found");
         Assertions.assertEquals(participant, actual);
-
     }
 
     @ParameterizedTest
     @MethodSource("updateParticipantProvider")
     void updateParticipant(Participant participant, Participant edit) {
         when(participantRepository.findById(1L)).thenReturn(Optional.ofNullable(participant));
+
         Participant actual = participantService.updateParticipant(edit, 1L);
+
         Assertions.assertNotEquals(participant, actual);
     }
 
     @ParameterizedTest
-    @MethodSource ("searchFlexibleProvider")
-    void searchFlexible(String searchString,  List <Participant> participants) {
+    @MethodSource("searchFlexibleProvider")
+    void searchFlexible(String searchString, List<Participant> participants) {
         when(participantRepository.searchByAllFields(searchString)).thenReturn(participants);
-        List<Participant> actual=participantService.searchFlexible(searchString);
-        Assertions.assertEquals(participants, actual);
 
+        List<Participant> actual = participantService.searchFlexible(searchString);
+
+        Assertions.assertEquals(participants, actual);
     }
 
     @Test
     void deleteParticipantById() {
         Participant expected = new Participant(1L, "Sferiff", "football", "Moldova", 342);
-        when(participantRepository.findById(1L)).thenReturn(Optional.of(expected));
         Participant actual = participantService.deleteParticipantById(1L);
+
+        when(participantRepository.findById(1L)).thenReturn(Optional.of(expected));
+
         Assertions.assertNull(actual);
     }
 
